Fixing 2 items-spacing is too small Error handling

--- a/src/pages/GamesPage/components/MineGame/MineGame.module.scss
+++ b/src/pages/GamesPage/components/MineGame/MineGame.module.scss
@@ -75,7 +75,7 @@
         justify-content: space-between;
         border-radius: 8px;
         height: 50px;
-        font-size: 13px;
+        font-size: 14px;
         text-align: center;
         background-color: $form-background;
 
@@ -116,7 +116,8 @@
         }
         .count_font {
           font-size: 18px;
-          font-weight: 600;
+          font-weight: 400;
+          line-height: 18px;
         }
         .mines_col {
           padding-top: 5px;
@@ -126,8 +127,9 @@
           background-color: #26496f;
         }
         .take_color {
-          padding: 3px;
+          padding: 4px 5px 3px;
           color: #80a2cc;
+          line-height: 19px;
         }
       }
     }
